--- a/index.html
+++ b/index.html
@@ -1,58 +1,134 @@
-<!DOCTYPE html>
-<html lang="ru" >
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="UTF-8" >
-  <title>Sergei Drach</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+    <title>Sergiy Drach</title>
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <!-- jQuery (necessary JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Custom Theme files -->
+    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="css/style.css" rel='stylesheet' type='text/css'/>
+
+    <!-- Custom Theme files -->
+    <!--//theme-style-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="Curriculum Vitae Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <!-- start menu -->
+
 </head>
-
 <body>
-  <div style="width:1300px; height:45px; background-color:#000000; text-align: center; font-size: 30px; color: #FFFFFF">
-    <a href="index.html" style="color:#FFFFFF">
-    Главная</a> ||
+<!-- header -->
+<div class="col-sm-3 col-md-2 sidebar">
+    <div class="sidebar_top">
+        <h1>Сергей Драч</h1>
+        <img src="images/avt.png" alt=""/>
+    </div>
+    <div class="details">
+        <h3>Телефон</h3>
+        <p>+38 063 562 88 34</p>
+        <h3>EMAIL</h3>
+        <p>sergo8707@gmail.com</p>
+        <address>
+            <h3>Адрес</h3>
+            <span>Украина,</span>
+            <span>Киев,</span>
+            <span>ул. Ломоносова,</span>
+            <span>дом. 47</span>
+        </address>
 
-    <a href="skills.html" style="color:#FFFFFF">
-    Навыки</a> ||
-
-    <a href="contacts.html" style="color:#FFFFFF">
-    Контакты</a>
-  </div>
-
-<p>
-  <a href='http://imglink.ru'> <img src='http://imglink.ru/pictures/22-05-16/cd4da34a241fcb70f1c7e01e623b3427.jpg' alt='фотохостинг' style="border-radius: 70px; float: right"> </a>
-  <h1><strong><em> Sergei Drach</em></strong></h1>
-
-  <p><h2><strong><u>Цель:</u></strong></h2> <em>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной сфере, быть полезным и успешным.</em></p>
-
-  <h2><strong><u>Должность:</u></strong><em><nobr>   Ruby, Ruby on Rails junior developer</nobr></em></h2>
-
-  <h2><strong><u>Образование:</u></strong></h2>
-  <em>Высшее  (09.2005 - 06.2010)</em>
-  <em>"Киевский национальный университет имени Тараса Шевченко"</em>
-
-  <h2><strong><u>Знание языков:</u></strong></h2>
-  <em>English- intermediate</em>
-
-  <h2><strong><u>Курсы, тренинги, сертификаты:</u></strong></h2>
-  <ul>
-    <li><a href="http://www.goodprogrammer.ru">goodprogrammer.ru (Интенсив по Ruby on Rails)</a></li>
-    <li><a href="http://www.codecademy.com">www.codecademy.com (Ruby, HTML, CSS, JS)</a></li>
-
-  </ul>
-
+    </div>
+    <div class="clearfix"></div>
 </div>
-
-<div>                          
-  <h2><strong><u>О себе</u></strong></h2>
-  <ul>
-    <li>Креативный</li>
-    <li>Обучаемый</li>
-    <li>Активный</li>
-    <li>Ответственный</li>
-  </ul>
-
+<!---->
+<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+<!---//pop-up-box---->
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <div class="content">
+        <div class="details_header">
+            <ul>
+                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
+                <li><a href="contact_rus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a></li>
+            </ul>
+        </div>
+        <div class="company">
+            <h3 class="clr">Цель:</h3>
+            <div class="company_details">
+                <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
+                    сфере, быть полезным и успешным.</h4>
+            </div>
+        </div>
+        <div class="company">
+            <h3 class="clr1">Общая информация</h3>
+            <div class="company_details">
+                <p><strong>Занятость:</strong>&nbsp;&nbsp;&nbsp;полная занятость.</p>
+                <p><strong>График работы:</strong>&nbsp;&nbsp;&nbsp;полный рабочий день.</p>
+                <p><strong>Переезд:</strong>&nbsp;&nbsp;&nbsp;готов к переезду.</p>
+                <p><strong>Командировки:</strong>&nbsp;&nbsp;&nbsp;готов к командировкам.</p>
+            </div>
+        </div>
+        <div class="skills">
+            <h3 class="clr2">Профессиональные навыки</h3>
+            <div class="skill_info">
+                <p>Хорошее понимание основ языка Ruby и фреймворка Ruby on Rails.
+                    Практический опыт разработки приложений разной степени сложности.
+                    Опыт работы со смежными технолгиями (HTML, JS, CSS, XML, JSON, SQLite, сетевые протоколы и т. п.)
+                </p>
+            </div>
+            <div class="skill_list">
+                <div class="skill1">
+                    <h4>Software</h4>
+                    <p><img class="image" src="images/logo_github.png" alt="logo_github"/>Github</p>
+                    <p><img class="image" src="images/LOGO.png" alt="logo_Photoshop"/>Photoshop</p>
+                    <p><img class="image_2" src="images/logo_heroku.png" alt="logo_heroku"/></p>
+                    <p><img class="image_2" src="images/logo_bootstrap.png" alt="logo_bootstrap"/></p>
+                    <p><img class="image_3" src="images/logo_sqlite.png" alt="logo_sqlite"/></p>
+                </div>
+                <div class="skill2">
+                    <h4>Languages</h4>
+                        <p><img class="image_4" src="images/logo_html.png" alt="CSS"/>HTML</p>
+                        <p><img class="image_4" src="images/logo_css.png" alt="CSS"/>CSS</p>
+                        <p><img class="image" src="images/JavaScript.png" alt="JavaScript"/>JavaScript</p>
+                        <p><img class="image" src="images/logo_ruby.png" alt="ruby"/>Ruby</p>
+                        <p><img class="image" src="images/rails.png" alt="images/rails"/>Ruby on Rails</p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="education">
+            <h3 class="clr3">Образование</h3>
+            <div class="education_details">
+                <h4>"Киевский национальный университет имени Тараса Шевченко"<span>Сентябрь 2005 - Июнь 2010</span></h4>
+                <h6>спецеалист хоцяйственого права</h6>
+            </div>
+            <div class="education_details">
+                <h4>Интенсив по Ruby on Rails<span>Апрель 2016 - Сентяберь 2016</span></h4>
+                <h6><a href="http://goodprogrammer.ru/">Хороший Программист</a></h6>
+            </div>
+            <div class="education_details">
+                <h4>Codecademy<span>Март 2016 - Август 2016</span></h4>
+                <h6><a href="https://www.codecademy.com">HTML & CSS, JavaScript, Command Line, Git, Ruby</a></h6>
+            </div>
+        </div>
+        <div class="copywrite">
+            <p>© 2016 Sergiy Drach</p>
+        </div>
+    </div>
 </div>
- 
+<!---->
 </body>
 </html>
