--- a/contact_rus.html
+++ b/contact_rus.html
@@ -55,10 +55,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="content">
         <div class="details_header">
             <ul>
-                <li><a href="index.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Главная</a></li>
+                <li><a href="index.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Главная</a>
+                </li>
                 <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt=""/> Github</a></li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="linkedin"/> Linkedin</a></li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png"
+                                                                                      alt="linkedin"/> Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
+                                                                           alt="Facebook"/>&nbsp;Facebook</a></li>
                 <li><a href="contact.html"><img class="git" src="images/eng.png" alt="English"/> English</a></li>
             </ul>
         </div>
