--- a/english.html
+++ b/english.html
@@ -2,20 +2,25 @@
 <html>
 <head>
     <title>Sergiy Drach</title>
-    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <!-- jQuery (necessary JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Custom Theme files -->
     <link href="css/dashboard.css" rel="stylesheet">
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
+    <link href="css/style.css" rel='stylesheet' type='text/css'/>
 
     <!-- Custom Theme files -->
     <!--//theme-style-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Curriculum Vitae Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- start menu -->
@@ -51,36 +56,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="content">
         <div class="details_header">
             <ul>
-                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
-                <li><a href="contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a></li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a></li>
+                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
+                                                              aria-hidden="true"></span>Print CV</a></li>
+                <li><a href="contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a>
+                </li>
+                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a>
+                </li>
                 <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
                 <li><a href="index.html"><img class="git" src="images/rus.png" alt=""/> Русский</a></li>
             </ul>
         </div>
         <div class="company">
-            <h3 class="clr">Цель:</h3>
+            <h3 class="clr">Aim</h3>
             <div class="company_details">
-                <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
-                    сфере, быть полезным и успешным.</h4>
+                <h4>To work as a junior developer with the aim of further learning and growth in this sphere, be useful
+                    and successful.</h4>
             </div>
         </div>
         <div class="company">
-            <h3 class="clr1">Общая информация</h3>
+            <h3 class="clr1">General information</h3>
             <div class="company_details">
-                <p><strong>Занятость:</strong>&nbsp;&nbsp;&nbsp;полная занятость.</p>
-                <p><strong>График работы:</strong>&nbsp;&nbsp;&nbsp;полный рабочий день.</p>
-                <p><strong>Переезд:</strong>&nbsp;&nbsp;&nbsp;готов к переезду.</p>
-                <p><strong>Командировки:</strong>&nbsp;&nbsp;&nbsp;готов к командировкам.</p>
+                <p><strong>Employment:</strong>&nbsp;&nbsp;&nbsp;full-time employment.</p>
+                <p><strong>Work schedule:</strong>&nbsp;&nbsp;&nbsp; full working day.</p>
+                <p><strong>Moving:</strong>&nbsp;&nbsp;&nbsp;ready for moving.</p>
+                <p><strong>Business trips:</strong>&nbsp;&nbsp;&nbsp;ready for business trips.</p>
             </div>
         </div>
         <div class="skills">
-            <h3 class="clr2">Профессиональные навыки</h3>
+            <h3 class="clr2">Professional skills</h3>
             <div class="skill_info">
-                <p>Хорошее понимание основ языка Ruby и фреймворка Ruby on Rails.
-                    Практический опыт разработки приложений разной степени сложности.
-                    Опыт работы со смежными технолгиями (HTML, JS, CSS, XML, JSON, SQLite, сетевые протоколы и т. п.)
+                <p>Good understanding of the basic principles of Ruby programming language and Ruby on Rails framework.
+                    Practical experience in development of applications with different degree of difficulty. Experience
+                    of work with related technologies (HTML, JS, CSS, XML, JSON, SQLite, network protocol, etc.).
                 </p>
             </div>
             <div class="skill_list">
@@ -104,17 +113,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
         <div class="education">
-            <h3 class="clr3">Образование</h3>
+            <h3 class="clr3">Education</h3>
             <div class="education_details">
-                <h4>"Киевский национальный университет имени Тараса Шевченко"<span>Сентябрь 2005 - Июнь 2010</span></h4>
-                <h6>спецеалист хоцяйственого права</h6>
+                <h4>"Taras Shevchenko National University of Kyiv"<span>September 2005 – June 2010</span></h4>
+                <h6>Specialist in civil law </h6>
             </div>
             <div class="education_details">
-                <h4>Интенсив по Ruby on Rails<span>Апрель 2016 - Сентяберь 2016</span></h4>
-                <h6><a href="http://goodprogrammer.ru/">Хороший Программист</a></h6>
+                <h4>Ruby on Rails intensive course<span>April 2016 – September 2016</span></h4>
+                <h6><a href="http://goodprogrammer.ru/">Good Programmer</a></h6>
             </div>
             <div class="education_details">
-                <h4>Codecademy<span>Март 2016 - Август 2016</span></h4>
+                <h4>Codecademy<span>March 2016 – August 2016</span></h4>
                 <h6><a href="https://www.codecademy.com">HTML & CSS, JavaScript, Command Line, Git, Ruby</a></h6>
             </div>
         </div>
