--- a/index.html
+++ b/index.html
@@ -57,16 +57,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="content">
         <div class="details_header">
             <ul>
-                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
-                <li><a href="contact_rus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a></li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a></li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
+                                                              aria-hidden="true"></span>Print CV</a></li>
+                <li><a href="contact_rus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email
+                    me</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png"
+                                                                                      alt="Linkedin"/>&nbsp;Linkedin</a>
+                </li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
+                                                                           alt="Facebook"/>&nbsp;Facebook</a></li>
                 <li><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a></li>
             </ul>
         </div>
         <div class="company">
-            <h3 class="clr">Цель:</h3>
+            <h3 class="clr">Цель</h3>
             <div class="company_details">
                 <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
                     сфере, быть полезным и успешным.</h4>
@@ -100,11 +106,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="skill2">
                     <h4>Languages</h4>
-                        <p><img class="image_4" src="images/logo_html.png" alt="CSS"/>HTML</p>
-                        <p><img class="image_4" src="images/logo_css.png" alt="CSS"/>CSS</p>
-                        <p><img class="image" src="images/JavaScript.png" alt="JavaScript"/>JavaScript</p>
-                        <p><img class="image" src="images/logo_ruby.png" alt="ruby"/>Ruby</p>
-                        <p><img class="image" src="images/rails.png" alt="images/rails"/>Ruby on Rails</p>
+                    <p><img class="image_4" src="images/logo_html.png" alt="CSS"/>HTML</p>
+                    <p><img class="image_4" src="images/logo_css.png" alt="CSS"/>CSS</p>
+                    <p><img class="image" src="images/JavaScript.png" alt="JavaScript"/>JavaScript</p>
+                    <p><img class="image" src="images/logo_ruby.png" alt="ruby"/>Ruby</p>
+                    <p><img class="image" src="images/rails.png" alt="images/rails"/>Ruby on Rails</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -112,11 +118,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="education">
             <h3 class="clr3">Образование</h3>
             <div class="education_details">
-                <h4>"Киевский национальный университет имени Тараса Шевченко"<span>Сентябрь 2005 - Июнь 2010</span></h4>
-                <h6>спецеалист хоцяйственого права</h6>
+                <h4>"Киевский национальный университет имени Тараса Шевченка"<span>Сентябрь 2005 - Июнь 2010</span></h4>
+                <h6>Специалист в области хозяйственного права.</h6>
             </div>
             <div class="education_details">
-                <h4>Интенсив по Ruby on Rails<span>Апрель 2016 - Сентяберь 2016</span></h4>
+                <h4>Интенсив по Ruby on Rails<span>Апрель 2016 - Сентябрь 2016</span></h4>
                 <h6><a href="http://goodprogrammer.ru/">Хороший Программист</a></h6>
             </div>
             <div class="education_details">
