--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- start menu -->
+    <!---->
+    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+    <!---//pop-up-box---->
 
 </head>
-<body>
-<!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
     <div class="sidebar_top">
         <h1>Сергей Драч</h1>
@@ -45,17 +47,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <span>ул. Ломоносова,</span>
             <span>дом. 47</span>
         </address>
-
     </div>
     <div class="clearfix"></div>
 </div>
-<!---->
-<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-<!---//pop-up-box---->
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
     <div class="content">
         <div class="details_header">
+            <div class="lang text-right">
+                <a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a>
+            </div>
+
+
+
             <ul>
                 <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
                                                               aria-hidden="true"></span>Print CV</a></li>
@@ -68,12 +72,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </li>
                 <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
                                                                            alt="Facebook"/>&nbsp;Facebook</a></li>
-                <li><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a></li>
             </ul>
         </div>
+
         <div class="company">
             <h3 class="clr">Цель</h3>
             <div class="company_details">
+
                 <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
                     сфере, быть полезным и успешным.</h4>
             </div>
@@ -81,10 +86,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="company">
             <h3 class="clr1">Общая информация</h3>
             <div class="company_details">
-                <p><strong>Занятость:</strong>&nbsp;&nbsp;&nbsp;полная занятость.</p>
-                <p><strong>График работы:</strong>&nbsp;&nbsp;&nbsp;полный рабочий день.</p>
-                <p><strong>Переезд:</strong>&nbsp;&nbsp;&nbsp;готов к переезду.</p>
-                <p><strong>Командировки:</strong>&nbsp;&nbsp;&nbsp;готов к командировкам.</p>
+                <p><strong class="space">Занятость:</strong>полная занятость.</p>
+                <p><strong class="space">График работы:</strong>полный рабочий день.</p>
+                <p><strong class="space">Переезд:</strong>готов к переезду.</p>
+                <p><strong class="space">Командировки:</strong>готов к командировкам.</p>
             </div>
         </div>
         <div class="skills">
