update language icons

--- a/english.html
+++ b/english.html
@@ -24,10 +24,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- start menu -->
+    <!---->
+    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
 
 </head>
 <body>
-<!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
     <div class="sidebar_top">
         <h1>Sergiy Drach</h1>
@@ -44,14 +46,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <span>Kyiv,</span>
             <span>Mykhaila Lomonosova St, 47</span>
         </address>
-
     </div>
     <div class="clearfix"></div>
 </div>
-<!---->
-<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-<!---//pop-up-box---->
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <div class="content">
         <div class="details_header">
@@ -65,10 +62,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a>
                 </li>
                 <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
-                <li><a href="index.html"><img class="git" src="images/rus.png" alt=""/> Русский</a></li>
             </ul>
         </div>
         <div class="company">
+            <div class="text-right"><a href="index.html"><img class="git" src="images/rus.png" alt=""/> Русский</a></div>
             <h3 class="clr">Aim</h3>
             <div class="company_details">
                 <h4>To work as a junior developer with the aim of further learning and growth in this sphere, be useful
@@ -78,10 +75,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="company">
             <h3 class="clr1">General information</h3>
             <div class="company_details">
-                <p><strong>Employment:</strong>&nbsp;&nbsp;&nbsp;full-time employment.</p>
-                <p><strong>Work schedule:</strong>&nbsp;&nbsp;&nbsp; full working day.</p>
-                <p><strong>Moving:</strong>&nbsp;&nbsp;&nbsp;ready for moving.</p>
-                <p><strong>Business trips:</strong>&nbsp;&nbsp;&nbsp;ready for business trips.</p>
+                <p><strong class="space">Employment:</strong>full-time employment.</p>
+                <p><strong class="space">Work schedule:</strong>full working day.</p>
+                <p><strong class="space">Moving:</strong>ready for moving.</p>
+                <p><strong class="space">Business trips:</strong>ready for business trips.</p>
             </div>
         </div>
         <div class="skills">
@@ -132,6 +129,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 </div>
-<!---->
 </body>
 </html>
