--- a/contact_rus.html
+++ b/contact_rus.html
@@ -24,9 +24,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- start menu -->
+    <!---->
+    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+    <!---//pop-up-box---->
 </head>
 <body>
-<!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
     <div class="sidebar_top">
         <h1>Сергей Драч</h1>
@@ -47,10 +50,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <div class="clearfix"></div>
 </div>
-<!---->
-<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-<!---//pop-up-box---->
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <div class="content">
         <div class="details_header">
@@ -62,10 +61,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                                                       alt="linkedin"/> Linkedin</a></li>
                 <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
                                                                            alt="Facebook"/>&nbsp;Facebook</a></li>
-                <li><a href="contact.html"><img class="git" src="images/eng.png" alt="English"/> English</a></li>
             </ul>
         </div>
         <div class="company contact-grid">
+            <div class="text-right"><a href="contact.html"><img class="git" src="images/eng.png" alt="English"/> English</a></div>
             <h3 class="clr1">Написать мне</h3>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSf4XR4tn6pbtV_ojxjNE0NnxH6ZlJ4D9UVmVaQYbpIl8EV42A/formResponse"
                   target="_self" method="POST" id="mG61Hd">
@@ -91,6 +90,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 </div>
-<!---->
 </body>
 </html>
