--- a/index.html
+++ b/index.html
@@ -3,46 +3,29 @@
 <head>
     <title>Sergiy Drach</title>
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
-    <!-- jQuery (necessary JavaScript plugins) -->
+
     <script src="js/jquery.min.js"></script>
-    <!-- Custom Theme files -->
+
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/style.css" rel='stylesheet' type='text/css'/>
 
-    <!-- Custom Theme files -->
-    <!--//theme-style-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Curriculum Vitae Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
-    <script type="application/x-javascript"> addEventListener("load", function () {
-        setTimeout(hideURLbar, 0);
-    }, false);
-    function hideURLbar() {
-        window.scrollTo(0, 1);
-    } </script>
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
 
     <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
     <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
 
 </head>
 <body>
-=======
-    <!-- start menu -->
-    <!---->
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-    <!---//pop-up-box---->
-
-</head>
->>>>>>> 773b5cf97516e56b47d17f93d28278bdfa1c7d23
 <div class="col-sm-3 col-md-2 sidebar">
     <div class="sidebar_top">
         <h1>Сергей Драч</h1>
-        <img src="images/avt.png" alt=""/>
+        <img src="images/avt.png" alt="ava"/>
     </div>
     <div class="details">
         <h3>Телефон</h3>
@@ -60,15 +43,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="clearfix"></div>
 </div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
     <div class="content">
         <div class="details_header">
-            <div class="lang text-right">
-                <a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a>
-            </div>
-
-
-
             <ul>
                 <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
                                                               aria-hidden="true"></span>Print CV</a></li>
@@ -83,12 +59,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                                            alt="Facebook"/>&nbsp;Facebook</a></li>
             </ul>
         </div>
-
         <div class="company">
             <div class="text-right"><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a></div>
             <h3 class="clr">Цель</h3>
             <div class="company_details">
-
                 <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
                     сфере, быть полезным и успешным.</h4>
             </div>
