--- a/english.html
+++ b/english.html
@@ -11,14 +11,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Curriculum Vitae Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
 
     <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
     <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
@@ -28,7 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="col-sm-3 col-md-2 sidebar">
     <div class="sidebar_top">
         <h1>Sergiy Drach</h1>
-        <img src="images/avt.png" alt=""/>
+        <img src="images/avt.png" alt="ava"/>
     </div>
     <div class="details">
         <h3>PHONE</h3>
@@ -60,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </ul>
         </div>
         <div class="company">
-            <div class="text-right"><a href="index.html"><img class="git" src="images/rus.png" alt=""/> Русский</a></div>
+            <div class="text-right"><a href="index.html"><img class="git" src="images/rus.png" alt="rus.img"/> Русский</a></div>
             <h3 class="clr">Aim</h3>
             <div class="company_details">
                 <h4>To work as a junior developer with the aim of further learning and growth in this sphere, be useful
@@ -72,7 +67,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="company_details">
                 <p><strong class="space">Employment:</strong>full-time employment.</p>
                 <p><strong class="space">Work schedule:</strong>full working day.</p>
-                <p><strong class="space">Work schedule:</strong> full working day.</p>
                 <p><strong class="space">Moving:</strong>ready for moving.</p>
                 <p><strong class="space">Business trips:</strong>ready for business trips.</p>
             </div>
