--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Curriculum Vitae Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 
@@ -60,7 +58,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </ul>
         </div>
         <div class="company">
-            <div class="text-right"><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a></div>
+            <div class="text-right"><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a>
+            </div>
             <h3 class="clr">Цель</h3>
             <div class="company_details">
                 <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
