--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </div>
     <div class="details">
         <h3>PHONE</h3>
-        <p>+38 063 562 88 34</p>
+        <p>+38 (063) 562-88-34</p>
         <h3>EMAIL</h3>
         <p><a href="sergo8707@gmail.com">sergo8707@gmail.com</a></p>
         <address>
@@ -45,15 +45,15 @@
             <ul>
                 <li><a href="english.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Home</a>
                 </li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt=""/> Github</a></li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png"
-                                                                                      alt="linkedin"/> Linkedin</a></li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
-                                                                           alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="menu_img" src="images/g2.png" alt="Github_img"/>Github</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="menu_img" src="images/li.png"
+                                                                                      alt="linkedin"/>Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="menu_img" src="images/f.png"
+                                                                           alt="Facebook"/>Facebook</a></li>
             </ul>
         </div>
         <div class="company contact-grid">
-            <div class="text-right"><a href="contact_rus.html"><img class="git" src="images/rus.png" alt="rus.png"/> Русский</a></div>
+            <div class="text-right"><a href="contact_rus.html"><img class="menu_img" src="images/rus.png" alt="rus.png"/>Русский</a></div>
             <h3 class="clr1">Contact</h3>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSczMwbl9aCTFMseTSrcMwRX9Fe67IH9BlyJl1Op_ncBTiScow/formResponse"
                   target="_self" method="POST" id="mG61Hd">
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="copywrite">
-            <p>© 2016 Sergiy Drach</p>
+            <p>&copy; 2016 Sergei Drach&#174;</p>
         </div>
     </div>
 </div>
