--- a/english.html
+++ b/english.html
@@ -27,7 +27,7 @@
     </div>
     <div class="details">
         <h3>PHONE</h3>
-        <p>+38 063 562 88 34</p>
+        <p>+38 (063) 562-88-34</p>
         <h3>EMAIL</h3>
         <p>sergo8707@gmail.com</p>
         <address>
@@ -43,19 +43,16 @@
     <div class="content">
         <div class="details_header">
             <ul>
-                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
-                                                              aria-hidden="true"></span>Print CV</a></li>
-                <li><a href="contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a>
-                </li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png" alt="Linkedin"/>&nbsp;Linkedin</a>
-                </li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png" alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
+                <li><a href="contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="menu_img" src="images/g2.png" alt="github"/>Github</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="menu_img" src="images/li.png" alt="Linkedin"/>Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="menu_img" src="images/f.png" alt="Facebook"/>Facebook</a></li>
             </ul>
         </div>
         <div class="company">
-            <div class="text-right"><a href="index.html"><img class="git" src="images/rus.png" alt="rus.img"/> Русский</a></div>
+            <div class="text-right"><a href="index.html"><img class="menu_img" src="images/rus.png" alt="rus.img"/>
+                Русский</a></div>
             <h3 class="clr">Aim</h3>
             <div class="company_details">
                 <h4>To work as a junior developer with the aim of further learning and growth in this sphere, be useful
@@ -102,20 +99,20 @@
         <div class="education">
             <h3 class="clr3">Education</h3>
             <div class="education_details">
-                <h4>"Taras Shevchenko National University of Kyiv"<span>September 2005 – June 2010</span></h4>
+                <h4>&#147;Taras Shevchenko National University of Kyiv&#148;<span>September 2005 - June 2010</span></h4>
                 <h6>Specialist in civil law </h6>
             </div>
             <div class="education_details">
-                <h4>Ruby on Rails intensive course<span>April 2016 – September 2016</span></h4>
+                <h4>Ruby on Rails intensive course<span>April 2016 - September 2016</span></h4>
                 <h6><a href="http://goodprogrammer.ru/">Good Programmer</a></h6>
             </div>
             <div class="education_details">
-                <h4>Codecademy<span>March 2016 – August 2016</span></h4>
+                <h4>Codecademy<span>March 2016 - August 2016</span></h4>
                 <h6><a href="https://www.codecademy.com">HTML & CSS, JavaScript, Command Line, Git, Ruby</a></h6>
             </div>
         </div>
         <div class="copywrite">
-            <p>© 2016 Sergiy Drach</p>
+            <p>&copy; 2016 Sergei Drach&#174;</p>
         </div>
     </div>
 </div>
