--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="details">
         <h3>Телефон</h3>
-        <p>+38 063 562 88 34</p>
+        <p>+38 (063) 562-88-34</p>
         <h3>EMAIL</h3>
         <p>sergo8707@gmail.com</p>
         <address>
@@ -44,21 +44,15 @@
     <div class="content">
         <div class="details_header">
             <ul>
-                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print"
-                                                              aria-hidden="true"></span>Print CV</a></li>
-                <li><a href="contact_rus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email
-                    me</a></li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt="github"/>&nbsp;Github</a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png"
-                                                                                      alt="Linkedin"/>&nbsp;Linkedin</a>
-                </li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
-                                                                           alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="javascript:window.print()"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
+                <li><a href="contact_rus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="menu_img" src="images/g2.png" alt="github"/>Github</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="menu_img" src="images/li.png" alt="Linkedin"/>Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="menu_img" src="images/f.png" alt="Facebook"/>Facebook</a></li>
             </ul>
         </div>
         <div class="company">
-            <div class="text-right"><a href="english.html"><img class="git" src="images/eng.png" alt="English"/>&nbsp;English</a>
+            <div class="text-right"><a href="english.html"><img class="menu_img" src="images/eng.png" alt="English"/>English</a>
             </div>
             <h3 class="clr">Цель</h3>
             <div class="company_details">
@@ -106,7 +100,8 @@
         <div class="education">
             <h3 class="clr3">Образование</h3>
             <div class="education_details">
-                <h4>"Киевский национальный университет имени Тараса Шевченка"<span>Сентябрь 2005 - Июнь 2010</span></h4>
+                <h4>&laquo;Киевский национальный университет имени Тараса
+                    Шевченка&raquo;<span>Сентябрь 2005 - Июнь 2010</span></h4>
                 <h6>Специалист в области хозяйственного права.</h6>
             </div>
             <div class="education_details">
@@ -119,7 +114,7 @@
             </div>
         </div>
         <div class="copywrite">
-            <p>© 2016 Sergiy Drach</p>
+            <p>&copy; 2016 Sergei Drach&#174;</p>
         </div>
     </div>
 </div>
