--- a/contact_rus.html
+++ b/contact_rus.html
@@ -27,7 +27,7 @@
     </div>
     <div class="details">
         <h3>Телефон</h3>
-        <p>+38 063 562 88 34</p>
+        <p>+38 (063) 562-88-34</p>
         <h3>EMAIL</h3>
         <p><a href="sergo8707@gmail.com">sergo8707@gmail.com</a></p>
         <address>
@@ -46,15 +46,15 @@
             <ul>
                 <li><a href="index.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Главная</a>
                 </li>
-                <li><a href="https://github.com/Sergo8707"><img class="git" src="images/g2.png" alt=""/> Github</a></li>
-                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="git" src="images/li.png"
-                                                                                      alt="linkedin"/> Linkedin</a></li>
-                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="git" src="images/f.png"
-                                                                           alt="Facebook"/>&nbsp;Facebook</a></li>
+                <li><a href="https://github.com/Sergo8707"><img class="menu_img" src="images/g2.png" alt=""/>Github</a></li>
+                <li><a href="https://www.linkedin.com/in/sergey-drach-279712127"><img class="menu_img" src="images/li.png"
+                                                                                      alt="linkedin"/>Linkedin</a></li>
+                <li><a href="https://www.facebook.com/sergey.drach.9"><img class="menu_img" src="images/f.png"
+                                                                           alt="Facebook"/>Facebook</a></li>
             </ul>
         </div>
         <div class="company contact-grid">
-            <div class="text-right"><a href="contact.html"><img class="git" src="images/eng.png" alt="English"/> English</a></div>
+            <div class="text-right"><a href="contact.html"><img class="menu_img" src="images/eng.png" alt="English"/>English</a></div>
             <h3 class="clr1">Написать мне</h3>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSf4XR4tn6pbtV_ojxjNE0NnxH6ZlJ4D9UVmVaQYbpIl8EV42A/formResponse"
                   target="_self" method="POST" id="mG61Hd">
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="copywrite">
-            <p>© 2016 Sergiy Drach</p>
+            <p>&copy; 2016 Sergei Drach&#174;</p>
         </div>
     </div>
 </div>
