--- a/english.html
+++ b/english.html
@@ -100,7 +100,7 @@
             <h3 class="clr3">Education</h3>
             <div class="education_details">
                 <h4>&#147;Taras Shevchenko National University of Kyiv&#148;<span>September 2005 - June 2010</span></h4>
-                <h6>Specialist in civil law </h6>
+                <h6>Department of law, Commercial law </h6>
             </div>
             <div class="education_details">
                 <h4>Ruby on Rails intensive course<span>April 2016 - September 2016</span></h4>
