--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="company">
-            <div class="text-right"><a href="english.html"><img class="menu_img" src="images/eng.png" alt="English"/>English</a>
+            <div class="text-right"><a href="eng.html"><img class="menu_img" src="images/eng.png" alt="English"/>English</a>
             </div>
             <h3 class="clr">Цель</h3>
             <div class="company_details">
