--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <h3 class="clr">Цель</h3>
             <div class="company_details">
-                <h4>Работать в качестве младшего разработчика с целью последующего обучения и роста в данной
+                <h4>Работать в качестве Ruby on Rails разработчика с целью последующего обучения и роста в данной
                     сфере, быть полезным и успешным.</h4>
             </div>
         </div>
