--- a/eng.html
+++ b/eng.html
@@ -55,7 +55,7 @@
                 Русский</a></div>
             <h3 class="clr">Aim</h3>
             <div class="company_details">
-                <h4>To work as a junior developer with the aim of further learning and growth in this sphere, be useful
+                <h4>To work as a Ruby on Rails developer with the aim of further learning and growth in this sphere, be useful
                     and successful.</h4>
             </div>
         </div>
