--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="copywrite">
-            <p>&copy; 2016 Sergei Drach&#174;</p>
+            <p>&copy; 2016 Sergiy Drach&#174;</p>
         </div>
     </div>
 </div>
