--- a/eng.html
+++ b/eng.html
@@ -110,9 +110,13 @@
                 <h4>Codecademy<span>March 2016 - August 2016</span></h4>
                 <h6><a href="https://www.codecademy.com">HTML & CSS, JavaScript, Command Line, Git, Ruby</a></h6>
             </div>
+            <div class="education_details">
+                <h4>Thinknetica<span>November 2016 - April 2017</span></h4>
+                <h6><a href="http://thinknetica.com/">Thinknetica</a></h6>
+            </div>
         </div>
         <div class="copywrite">
-            <p>&copy; 2016 Sergei Drach&#174;</p>
+            <p>&copy; 2016 Sergiy Drach&#174;</p>
         </div>
     </div>
 </div>
