--- a/index.html
+++ b/index.html
@@ -112,9 +112,13 @@
                 <h4>Codecademy<span>Март 2016 - Август 2016</span></h4>
                 <h6><a href="https://www.codecademy.com">HTML & CSS, JavaScript, Command Line, Git, Ruby</a></h6>
             </div>
+            <div class="education_details">
+                <h4>Thinknetica<span>Ноябрь 2016 - Апрель 2017</span></h4>
+                <h6><a href="http://thinknetica.com/">Thinknetica</a></h6>
+            </div>
         </div>
         <div class="copywrite">
-            <p>&copy; 2016 Sergei Drach&#174;</p>
+            <p>&copy; 2016 Sergiy Drach&#174;</p>
         </div>
     </div>
 </div>
