--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                     <p><img class="image" src="images/logo_ruby.png" alt="ruby"/>Ruby</p>
                     <p><img class="image" src="images/rails.png" alt="images/rails"/>Ruby on Rails</p>
                 </div>
+                <div class="skill2">
+                    <h4></h4>
+                    <p><img class="image_5" src="images/react_native.png" alt="React Native"/></p>
+                    <p><img class="image_5" src="images/backbone.png" alt="Backbone"/></p>
+                </div>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -115,6 +120,25 @@
             <div class="education_details">
                 <h4>Thinknetica<span>Ноябрь 2016 - Апрель 2017</span></h4>
                 <h6><a href="http://thinknetica.com/">Thinknetica</a></h6>
+            </div>
+        </div>
+        <div class="work">
+            <h3 class="clr4">Опыт работы</h3>
+            <div class="work_details">
+              <a href="http://netfix.xyz/">
+                <h4><img class="net_fix" src="images/net_fix.png" alt="CSS"/>
+                  &laquo;NetFix&raquo;
+                  <span>Ruby on Rails Developer</span></h4>
+                </a>
+                <h5>Май‎ 2017 - по настоящее время</h6>
+                </div>
+            <div class="work_details">
+              <a href="https://www.smileexpo.com.ua">
+                <h4><img class="smile_expo" src="images/smile_expo.png" alt="CSS"/>
+                  &laquo;Smile Expo&raquo;
+                <span>Ruby on Rails Developer</span></h4>
+              </a>
+              <h5>Март 2017 - Май‎ 2017</h6>
             </div>
         </div>
         <div class="copywrite">
