--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="skill_list">
                 <div class="skill1">
-                    <h4>Software</h4>
+                    <h4>Skills</h4>
                     <p><img class="image" src="images/logo_github.png" alt="logo_github"/>Github</p>
                     <p><img class="image" src="images/LOGO.png" alt="logo_Photoshop"/>Photoshop</p>
                     <p><img class="image_2" src="images/logo_heroku.png" alt="logo_heroku"/></p>
@@ -87,7 +87,7 @@
                     <p><img class="image_3" src="images/logo_sqlite.png" alt="logo_sqlite"/></p>
                 </div>
                 <div class="skill2">
-                    <h4>Languages</h4>
+                    <h4></h4>
                     <p><img class="image_4" src="images/logo_html.png" alt="CSS"/>HTML</p>
                     <p><img class="image_4" src="images/logo_css.png" alt="CSS"/>CSS</p>
                     <p><img class="image" src="images/JavaScript.png" alt="JavaScript"/>JavaScript</p>
@@ -98,6 +98,8 @@
                     <h4></h4>
                     <p><img class="image_5" src="images/react_native.png" alt="React Native"/></p>
                     <p><img class="image_5" src="images/backbone.png" alt="Backbone"/></p>
+                    <p><img class="image_3" src="images/dart-logo.png" alt="Dart" /></p>
+                    <p><img class="image_3" src="images/flutter-logo.svg.png" alt="Flutter" /></p>
                 </div>
                 <div class="clearfix"></div>
             </div>
